--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,128 @@
-Django==3.2.16
-djangorestframework==3.14.0
-djangorestframework_simplejwt==4.4.0
-drf_yasg==1.21.4
+analytics-python==1.2.9
+apt-xapian-index==0.47
+apturl==0.5.2
+asgiref==3.4.1
+asn1crypto==0.24.0
+attrs==19.3.0
+autopep8==2.0.0
+boto3==1.14.7
+botocore==1.17.7
+Brlapi==0.6.6
+certifi==2020.6.20
+cffi==1.14.0
+chardet==3.0.4
+click==7.1.2
+command-not-found==0.3
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==2.9.2
+cupshelpers==1.0
+defer==1.0.6
+distlib==0.3.6
+distro-info===0.18ubuntu0.18.04.1
+django-cors-headers==3.10.1
+docopt==0.6.2
+docutils==0.15.2
+filelock==3.4.1
+Flask==1.1.2
+Flask-Cors==3.0.8
+Flask-Login==0.5.0
+flask-marshmallow==0.13.0
+flask-mongoengine==0.9.5
+flask-swagger-ui==3.25.0
+Flask-WTF==0.14.3
+future==0.18.2
+httplib2==0.9.2
+idna==2.9
+importlib-metadata==4.8.3
+importlib-resources==5.4.0
+inflection==0.5.1
+itsdangerous==1.1.0
+itypes==1.2.0
+Jinja2==2.11.2
+jmespath==0.10.0
+joblib==1.0.1
+jsonschema==3.2.0
+keyring==10.6.0
+keyrings.alt==3.0
+language-selector==0.1
+launchpadlib==1.10.6
+lazr.restfulclient==0.13.5
+lazr.uri==1.0.3
+livereload==2.6.3
+louis==3.5.0
+lunr==0.5.8
+macaroonbakery==1.1.3
+Mako==1.0.7
+Markdown==3.3.4
+MarkupSafe==1.1.1
+marshmallow==3.6.1
+mkdocs==1.1.2
+mkdocs-material==7.0.6
+mkdocs-material-extensions==1.0.1
+mongoengine==0.20.0
+netifaces==0.10.4
+nltk==3.5
+numpy==1.19.0
+oauth==1.0.1
+olefile==0.45.1
+packaging==21.3
+pandas==1.0.5
+pep517==0.13.0
+pexpect==4.2.1
+Pillow==5.1.0
+platformdirs==2.4.0
+protobuf==3.0.0
+pycairo==1.16.2
+pycodestyle==2.10.0
+pycparser==2.20
+pycrypto==2.6.1
+pycups==1.9.73
+Pygments==2.8.1
+PyGObject==3.26.1
+PyJWT==1.7.1
+pymacaroons==0.13.0
+pymdown-extensions==8.1.1
+pymongo==3.10.1
+PyNaCl==1.1.2
+pyparsing==3.0.9
+pyRFC3339==1.0
+pyrsistent==0.16.0
+python-apt==1.6.5+ubuntu0.5
+python-dateutil==2.8.1
+python-debian==0.1.32
+python-magic==0.4.15
+pytz==2022.6
+pyxdg==0.25
+PyYAML==5.4.1
+regex==2021.3.17
+reportlab==3.4.0
+requests==2.24.0
+requests-unixsocket==0.1.5
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.7
+s3transfer==0.3.3
+SecretStorage==2.3.1
+simplejson==3.13.2
+six==1.15.0
+sqlparse==0.4.3
+system-service==0.3
+systemd-python==234
+tomli==1.2.3
+tornado==6.1
+tqdm==4.59.0
+typing-extensions==3.7.4.3
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+uritemplate==4.1.1
+urllib3==1.25.9
+usb-creator==0.3.3
+virtualenv==20.17.0
+wadllib==1.3.2
+Werkzeug==1.0.1
+WTForms==2.3.1
+xkit==0.0.0
+yarg==0.1.9
+zipp==3.1.0
+zope.interface==4.3.2
